2000-02-22  James Henstridge  <james@daa.com.au>

	* sheets/Circuit.sheet: added new circuit shapes to sheet.

	* plug-ins/cgm/cgm.c: cgm plugin updates from Henk Jan Priester
	<hj@justcroft.com>.  Fixes number encoding, colour encoding, fonts
	and adds a few new features.

2000-02-21  Daniel Egger  <egger@suse.de>

	* sheets/*.sheets: Added German translations and made some
	corrections to the others.
	
2000-02-21  James Henstridge  <james@daa.com.au>

	* shapes/Circuit/Makefile.am (SHAPES): added new shapes to list.

	* shapes/Circuit/...: added new shapes from Erik Janssens.

2000-02-20  James Henstridge  <james@daa.com.au>

	* app/interface.c (create_color_area): realize the parent window
	first.

	* objects/standard/image.c: properties patch for standard image
	object, from Lars Clausen.

	* lib/properties.c: support for PROP_TYPE_FILE from Lars Clausen.

	* lib/properties.h (PropType): added file property type.

	* shapes/Circuit/speaker_de.xpm: changed size of pixmap to match
	other shapes.

	* app/interface.c: use wrap box for toolbox.

	* app/Makefile.am: added new files.

	* app/gtk*wrapbox.[ch]: added wrap box widget.

2000-02-19  James Henstridge  <james@daa.com.au>

	* sheets/network.sheet: added extra shapes to networks sheet.

	* configure.in (AC_OUTPUT): added shapes/network/Makefile

	* shapes/network/*: added shapes that were posted to the list a while
	back.
	
	* shapes/Makefile.am (SUBDIRS): added network subdirectory

	* app/menus.c (toolbox_menu_items): don't right justify help menu for
	gtk+ version of menus.

	* app/properties.c (create_dialog): use a GnomeDialog if we happen
	to be using gnome.

2000-02-18  James Henstridge  <james@daa.com.au>

	* objects/flowchart/box.c: set extra data for corner radius and text
	padding properties.

	* objects/standard/box.c: set extra data for corner radius property.

	* lib/properties.h: set extra data in some standard properties.

	* lib/properties.c (prop_get_widget): look at the extra data for